# SpatialDS

./: .gitignore  CMakeLists.txt  Common.hpp  GlutMain.cpp  Point.hpp  README.md  ShapeMain.cpp  SpatialDS.hpp  TestMain.cpp  Vec.hpp
CmdLine/: CmdLine.cpp  CmdLine.hpp
Shape/: Circle.hpp  CollisionFunc.hpp  PaintFunc.cpp  Segment.hpp  Shape.hpp  Triangle.hpp  a.out  test.cpp
SpatialDSImpl/: Brute.hpp  ControlGroup.hpp  KDTree.hpp  PowSplitTree.hpp  SortSweep.hpp  UniformGrid.hpp
